--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9" # optional since v1.27.0
 services:
   web_api:
     build: . # build the Docker image
-    container_name: web_api_application
+    container_name: car_sale_api
     ports:
       - "5000:80"
   sql:
