--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     build: . # build the Docker image
     container_name: car_sale_api
     ports:
-      - "5000:80"
+      - "5001:80"
   sql:
-    image: "mcr.microsoft.com/mssql/server:2022-latest"
+    image: "mcr.microsoft.com/azure-sql-edge:latest"
     container_name: sql_server2022
     ports: # not actually needed, because the two services are on the same network.
       - "1433:1433"
